--- a/sentiment_analysis/notebooks/ML Modelling.ipynb
+++ b/sentiment_analysis/notebooks/ML Modelling.ipynb
@@ -409,7 +409,12 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1429,7 +1434,12 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2476,6 +2486,76 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### test the vectorizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params_dict = {'binary':True, 'decode_error':\"replace\", 'strip_accents':'unicode',\n",
+    "                                 'stop_words':'english', 'min_df':0.005}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vec = CountVectorizer(params_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CountVectorizer(analyzer='word', binary=False, decode_error='strict',\n",
+       "                dtype=<class 'numpy.int64'>, encoding='utf-8',\n",
+       "                input={'binary': True, 'decode_error': 'replace',\n",
+       "                       'min_df': 0.005, 'stop_words': 'english',\n",
+       "                       'strip_accents': 'unicode'},\n",
+       "                lowercase=True, max_df=1.0, max_features=None, min_df=1,\n",
+       "                ngram_range=(1, 1), preprocessor=None, stop_words=None,\n",
+       "                strip_accents=None, token_pattern='(?u)\\\\b\\\\w\\\\w+\\\\b',\n",
+       "                tokenizer=None, vocabulary=None)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -2976,7 +3056,7 @@
     "for c in [0.01, 0.05, 0.25, 0.5, 1]:\n",
     "    lr = LogisticRegression(C=c)\n",
     "    lr.fit(X_train, y_train)\n",
-    "    print (\"Accuracy for C=%s: %s\" \n",
+    "    print(\"Accuracy for C=%s: %s\" \n",
     "           % (c, accuracy_score(y_val, lr.predict(X_val))))"
    ]
   },
@@ -4363,7 +4443,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
