Collaboratory notebook made compatible with data

--- a/sentiment_analysis/notebooks/Sentiment Analysis Walkthrough Part 1.ipynb
+++ b/sentiment_analysis/notebooks/Sentiment Analysis Walkthrough Part 1.ipynb
@@ -1,17 +1,17 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Notebook from https://github.com/aaronkub/machine-learning-examples"
+    "# Sentiment Analysis of Movie Reviews using Logistic Regression\n",
+    "Notebook adapted from:   \n",
+    "https://github.com/aaronkub/machine-learning-examples/blob/master/imdb-sentiment-analysis/Sentiment%20Analysis%20Walkthrough%20Part%201.ipynb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,28 +20,21 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import os\n",
-    "import re\n"
+    "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/Users/afshaanmazagonwalla/Documents/git-repos/TechTogether/ml-web-app/imdb-sentiment-analysis'"
+       "'/Users/amazagonwalla/Documents/git-repos/TechTogether2020/ml-web-app/sentiment_analysis/notebooks'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,29 +45,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: './data/movie_data/full_train.txt'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-562328c58cbd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mreviews_train\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mline\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'./data/movie_data/full_train.txt'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'r'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mreviews_train\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mline\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: './data/movie_data/full_train.txt'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "reviews_train = []\n",
-    "for line in open('./data/movie_data/full_train.txt', 'r'):\n",
+    "for line in open('../data/movie_data/full_train.txt', 'r'):\n",
     "    \n",
     "    reviews_train.append(line.strip())\n",
     "    \n",
     "reviews_test = []\n",
-    "for line in open('./data/movie_data/full_test.txt', 'r'):\n",
+    "for line in open('../data/movie_data/full_test.txt', 'r'):\n",
     "    \n",
     "    reviews_test.append(line.strip())"
    ]
